--- a/locale/pt_BR/LC_MESSAGES/gitlab2kanboard.po
+++ b/locale/pt_BR/LC_MESSAGES/gitlab2kanboard.po
@@ -5,26 +5,46 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2017-04-18 10:30-0300\n"
-"PO-Revision-Date: 2017-04-18 10:31-0300\n"
+"POT-Creation-Date: 2017-04-18 11:10-0300\n"
+"PO-Revision-Date: 2017-04-18 11:13-0300\n"
+"Last-Translator: \n"
 "Language-Team: \n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: pygettext.py 1.5\n"
 "X-Generator: Poedit 1.8.9\n"
-"Last-Translator: \n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"Language: pt_BR\n"
 
-#: gitlab2kanboard.py:10
+#: gitlab2kanboard.py:14
 msgid "Ready"
 msgstr "A fazer"
 
-#: gitlab2kanboard.py:11
+#: gitlab2kanboard.py:15
 msgid "Work in progress"
 msgstr "Em andamento"
 
-#: importer.py:74
+#: importer.py:44
+msgid "Project {}/{} created, id: {} !"
+msgstr "Projeto {}/{} criado, id: {} !"
+
+#: importer.py:75
 msgid "Done"
 msgstr "Feito"
+
+#: importer.py:95
+msgid "... issue {} migrated to task {} {}"
+msgstr "... issue {} migrada para a tarefa {} {}"
+
+#: importer.py:98
+msgid "(closed)"
+msgstr "(fechado)"
+
+#: importer.py:100
+msgid "Oops: problem to import {}"
+msgstr "Oops: problemas ao importar {}"
+
+#: importer.py:102
+msgid "{} issue(s) migrated !"
+msgstr "{} issue(s) migrada(s) !"
