--- a/locale/pt_BR/LC_MESSAGES/gitlab2kanboard.po
+++ b/locale/pt_BR/LC_MESSAGES/gitlab2kanboard.po
@@ -4,9 +4,9 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: 1.0\n"
 "POT-Creation-Date: 2017-04-18 11:10-0300\n"
-"PO-Revision-Date: 2017-04-18 11:13-0300\n"
+"PO-Revision-Date: 2017-04-18 11:54-0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: pt_BR\n"
@@ -16,6 +16,7 @@ msgstr ""
 "Generated-By: pygettext.py 1.5\n"
 "X-Generator: Poedit 1.8.9\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Poedit-SourceCharset: UTF-8\n"
 
 #: gitlab2kanboard.py:14
 msgid "Ready"
